--- a/ReservedYouFrontEnd/src/app/components/bus-service-section/bus-service-section.component.html
+++ b/ReservedYouFrontEnd/src/app/components/bus-service-section/bus-service-section.component.html
@@ -1,11 +1,8 @@
-<h1>Bus Service Section</h1>
-<div>
+<div class="bus-service-section">
+  <div class="bus-service-container">
+    <h2 class="bus-service-title">Available Bus Services</h2>
     <div>
-        <button>Add Bus Service</button>
+      <app-bus-service-list></app-bus-service-list>
     </div>
-    <div>
-        <h2>List of Bus Services</h2>
-        <app-bus-service-list></app-bus-service-list>
-    </div>
+  </div>
 </div>
-
