--- a/ReservedYouFrontEnd/src/app/components/admin-dashboard/admin-dashboard.component.css
+++ b/ReservedYouFrontEnd/src/app/components/admin-dashboard/admin-dashboard.component.css
@@ -6,13 +6,14 @@
   }
   
   .app-layout {
-    height: 100vh;
+    min-height: 100vh;
+    max-height: auto;
   }
   
   .menu-sidebar {
     position: relative;
     z-index: 10;
-    min-height: 100vh;
+    min-height: 100%;
     box-shadow: 2px 0 6px rgba(0,21,41,.35);
   }
   
@@ -77,6 +78,6 @@
     padding: 24px;
     background: #fff;
     height: 100%;
-    width: max-content;
+    width: 100%;
   }
   
