Routes Section Added to Admin Dashboard along with UI, Services and Data Binding

--- a/ReservedYouFrontEnd/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/ReservedYouFrontEnd/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -25,7 +25,7 @@
               <a routerLink="/admin/busservice">Bus Service</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a>Workplace</a>
+              <a routerLink="/admin/route">Routes</a>
             </li>
           </ul>
         </li>
